--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>{{ site.title }}</title>
-	{% include meta-icon-link.md %}
+	{% include meta-link.md %}
 </head>
 <body>
  <div id="container">
